# ROS_Desktop_Robot

./: CMakeLists.txt  DatacomPcToRaspberry.py  Datacom_Raspberry_recieve_from_PC.py  README.md  package.xml  robot_template.urdf
Datacommunicatie/: (NOT FIXED)something_wrong_here_log.txt  DatacomPcToRaspberry.py  Datacom_Raspberry_recieve_from_PC.py  dare_crc.py  escape_bit_test.py  floatToBytes.py  handigeLinks.txt  path.csv  serial_read_write.py  serial_write.py  test crc.py
Datacommunicatie/arduino_uart/: arduino_uart.ino
Test_folder/: Tes.txt
backup_files/: ros_desktop_robot.launch
include/ros_desktop_robot/: ros_desktop_robot.hpp
launch/: launch_instructions  ros_desktop_robot.launch
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: desktop_robot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
rviz/: urdf.rviz
src/: desktop_robot.urdf  desktop_robot.urdf.xacro  ros_desktop_robot.cpp  ros_desktop_robot_node.cpp
